--- a/package.json
+++ b/package.json
@@ -4,12 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "build:dev": "npm run build -- --watch --mode=development",
+    "start:dev": "npm run build:dev & nodemon server"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cherio": "^1.0.0-rc.2",
+    "d3": "^7.0.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "fs": "0.0.1-security",
+    "instagram-web-api": "^2.2.2",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.7",
+    "path": "^0.12.7",
+    "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-react": "^7.14.5",
+    "babel-loader": "^8.2.2",
+    "webpack": "^5.40.0",
+    "webpack-cli": "^4.7.2"
   }
 }
